--- a/css/main.css
+++ b/css/main.css
@@ -2697,7 +2697,6 @@ p + .nav-secondary {
     height: 6.25rem;
     float: left;
     margin-right: 0.625rem;
-    margin-bottom: 0.625rem;
 }
 
 @supports ((-webkit-shape-outside: circle(50%)) or (shape-outside: circle(50%))) {
@@ -2745,6 +2744,13 @@ picture {
 .reading-time,
 .related-anchor {
     margin-top: 0.5rem;
+}
+
+/**
+ * Biographical information about the Author
+ */
+.author-biography {
+    margin-top: 0.625rem;
 }
 
 .widget {
