--- a/src/sass/abstracts/_functions.scss
+++ b/src/sass/abstracts/_functions.scss
@@ -36,36 +36,88 @@
 
 
 ///
-/// Accepts two or three parameters.
+/// Accepts 2 or more parameters.
 ///
-/// @param {Color} $from - Start Color
-/// @param {Color} $to - End Color
 /// @param {String} $direction [to bottom] - Gradient direction
+/// @param {List} $color-stops - List of Color values
 ///
-/// @example scss - Two parameters
+/// @example scss - 2 parameters
 ///   background-image: gradient(white, black);
 ///   // background-image: linear-gradient(to bottom, white, black);
 ///
-/// @example scss - Three parameters
+/// @example scss - 3+ parameters
 ///   background-image: gradient(to top right, red, green, blue);
 ///   // background-image: linear-gradient(to top right, red, green, blue);
 ///
-/// @throw Error if two or more parameters are not passed.
+/// @throw Error if 2 or more parameters are not passed.
 ///
 /// @return {String} Linear Gradient snippet
 ///
 @function gradient($direction, $color-stops...) {
     @if not $direction and not $color-stops {
-        @warn "gradient() expects a direction and two or more colors to gradient between.";
+        @warn "gradient() expects a direction and/or 2 or more colors to gradient between.";
         @return false;
     }
 
     @if is-direction($direction) == false {
         $color-stops: $direction, $color-stops;
-        $direction: "to bottom"; // equivalent to "to bottom"
+        $direction: "to bottom";
     }
 
-    @return linear-gradient(#{$direction}, $color-stops);
+    @return linear-gradient(#{$direction},
+                            #{$color-stops});
+}
+
+
+///
+/// Accepts 2 or 3 parameters.
+///
+/// @param {String} $direction [to bottom] - Gradient direction
+/// @param {List} $color-stops - List of Color values
+///
+/// @example scss - 2 parameters
+///   background-image: gradient(white, black);
+///   // background-image: linear-gradient(to bottom, white, black);
+///
+/// @example scss - 3 parameters
+///   background-image: gradient(to top right, red, green, blue);
+///   // background-image: linear-gradient(to top right, red, green, blue);
+///
+/// @throw Error if 2 or 3 parameters are not passed.
+///
+/// @return {String} Scrim Gradient snippet
+///
+@function scrim-gradient($direction, $color-stops...) {
+    @if not $direction and not $color-stops {
+        @warn "scrim-gradient() expects a direction and/or two colors to gradient between.";
+        @return false;
+    }
+
+    @if is-direction($direction) == false {
+        $color-stops: $direction, $color-stops;
+        $direction: "to bottom";
+    }
+
+    $start-color: nth($color-stops, 1);
+    $end-color:   nth($color-stops, 2);
+
+    $start-color: white;
+    $end-color: black;
+
+    @return linear-gradient(#{$direction},
+                            mix($end-color, $start-color,  100%)    0%,
+                            mix($end-color, $start-color, 73.8%) 19.0%,
+                            mix($end-color, $start-color, 54.1%) 34.0%,
+                            mix($end-color, $start-color, 38.2%) 47.0%,
+                            mix($end-color, $start-color, 27.8%) 56.5%,
+                            mix($end-color, $start-color, 19.4%) 65.0%,
+                            mix($end-color, $start-color, 12.6%) 73.0%,
+                            mix($end-color, $start-color,  7.5%) 80.2%,
+                            mix($end-color, $start-color,  4.2%) 86.1%,
+                            mix($end-color, $start-color,  2.1%) 91.0%,
+                            mix($end-color, $start-color,  0.8%) 95.2%,
+                            mix($end-color, $start-color,  0.2%) 98.2%,
+                            mix($end-color, $start-color,    0%)  100%);
 }
 
 
